# mirror-me

./: .gitignore  pyproject.toml
ai_model/data/spectrograms/: trimmed_audio.npy
ai_model/scripts/: evaluate.py  preprocess.py  train.py  workflow.py
tools/: trim_audio.cpp  trim_audio.py
