[tool.poetry]
name = "mirror-me"
version = "0.1.0"
description = "Intelligent tool for self driven data musical expression"
authors = ["bbakercello <bbakercello@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.16.2"
tensorflow-hub = "0.16.1"
numpy = ">=1.23.5,<2.0.0"
librosa = "^0.10.2.post1"
pydub = "^0.25.1"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
